# mm-data-test

./: .gitignore  README.md  main.py  pyproject.toml  webhook.py  webhook_data.db
files/: payloads.json
sql/: stg_events.sql
sql/analysis/: distinct_geofence_counts_per_day.sql  location_history.sql
