[tool.poetry]
name = "location-takehome"
version = "0.1.0"
description = "Milkmoovement Example Assignment"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
requests = "^2.31.0"
pygeohash = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
